--- a/livro/caderno-arvore.asciidoc
+++ b/livro/caderno-arvore.asciidoc
@@ -1,20 +1,10 @@
+= Caderno Árvores =
+
 == Objetivo 1
 
 === O que carácteriza uma árvore?
 
 Escreva, com suas próprias palavras, o seu conceito de árvore:
-
-____
-
-(Escreva o seu conceito aqui).
-
-____
-
-****
-
-(Escreva o seu conceito aqui).
-
-****
 
 ____
 
