--- a/livro/caderno-digital-semana1.adoc
+++ b/livro/caderno-digital-semana1.adoc
@@ -1,6 +1,10 @@
-= Caderno Digital =
+= Caderno Digital: Semana 1
 
-== Semana 1
+== Objetivo 1
 
-=== Objetivo 1
+=== Atividade: Entendimento sobre Design Instrucional
+
+Para você, o que é Design Instrucional?
+
+> Registre sua resposta aqui.
 
