--- a/livro/s1-ob2-designer-autores-odl.adoc
+++ b/livro/s1-ob2-designer-autores-odl.adoc
@@ -166,7 +166,7 @@ designer instrucional
 <<<
 
 [[atividade_designer_autores]]
-==== Atividade: Resolução de problemas entre designer instrucional e autores
+==== Atividade: Designer instrucional e autores
 
 image::images/patividade.pdf[]
 
