--- a/livro/caderno-digital-semana1.adoc
+++ b/livro/caderno-digital-semana1.adoc
@@ -55,3 +55,61 @@ O curso em que você trabalha possui um Designer Instrucional?
 - `[ ]` Não
 - `[ ]` Sim. Quem é? `____________________________`
 
+
+[[atividade_influencia_da_analise_na_escrita]]
+==== Atividade: Influência dos produtos da etapa análise na escrita
+
+image::images/patividade.pdf[]
+
+Um dos modelos de processos que utilizaremos na nossa produção é o ADDIE. 
+Neste momento estamos nos focando apenas nas duas primeiras etapas que 
+antecedem a escrita dos conteúdos: Análise e Planejamento. 
+*Verifique* os produtos finais destas etapas.
+
+Para cada um dos produtos finais da etapa de análise *responda*: 
+como ele iria influenciaria a sua escrita do livro?
+
+
+|====
+^s| Influência dos Produtos finais da etapa Análise
+| Influência do produto final _Diagnóstico das necessidades_ sua escrita:
+
++
+
++
+
++
+
+| Influência do produto final _Análise do público-alvo_ sua escrita:
+
++
+
++
+
++
+
+| Influência do produto final _Planilha de cronograma_ sua escrita:
+
++
+
++
+
++
+
+| Influência do produto final _Planilha de custo estimado_ sua escrita:
+
++
+
++
+
++
+
+| Influência do produto final _Definição dos recursos humanos, materiais, tecnológicos e financeiros_ sua escrita:
+
++
+
++
+
++
+|====
+
